Justert Gradle-oppsett for oppslag-api etter flytting av kode